# Cross-Border-Ebola-Risk-Mapping-Prototype

./: .gitignore  APPLY_TO_REPO.md  README.md  README_EBOLA_RISK_WORKFLOW.md  environment.yml  pyproject.toml
.github/workflows/: deploy-jupyterlite.yml  tests.yml
GIS/admin-boundaries/: gadm41_COD_2.dbf  gadm41_COD_2.shp.xml
GIS/airports/: airports.sbn  airports.sbx  airports.shp.xml
GIS/ebola-cases/: drc_ebola_cases_consolidated.csv  drc_ebola_cases_consolidated.xlsx
GIS/health-facilities/: Facilities (1).geojson  Facilities.dbf  Facilities.gpkg  SouthSudanDATIMfacilities.dbf  SouthSudanDATIMfacilities.geojson  SouthSudanDATIMfacilities.sbn  SouthSudanDATIMfacilities.sbx  SouthSudanDATIMfacilities.shp  SouthSudanDATIMfacilities.shp.xml  (+6 more)
configs/: data_sensitivity.yml  layer_catalog.yml  model_config.yml  scenarios.yml  weights_baseline.yml
data/: README.md
docs/: methods_outline.md
jupyterlite/: README.md
notebooks/: 00_repository_orientation.ipynb  01_data_inventory_gis_folder.ipynb  02_area_of_interest_border_corridor.ipynb  03_standardize_layers.ipynb  04_feature_engineering_interface_layers.ipynb  05_bat_reservoir_enm_elapid.ipynb  06_importation_pressure_mobility_corridors.ipynb  07_facility_catchment_vulnerability.ipynb  08_deterministic_risk_index.ipynb  09_stochastic_scenarios_uncertainty.ipynb  10_validation_sensitivity_export.ipynb
notebooks_lite/: 00_jupyterlite_synthetic_risk_demo.ipynb  01_jupyterlite_weight_sensitivity.ipynb
scripts/: build_layer_catalog.py  create_synthetic_demo_data.py  run_synthetic_risk_demo.py
tests/: test_risk.py
(+20 files in other folders)
